--- a/style.css
+++ b/style.css
@@ -301,8 +301,13 @@ img {
   max-height: 320px;
   aspect-ratio: 4 / 3;
   object-fit: cover;
-  object-position: center center;
+  object-position: 50% 50%;
   display: block;
+}
+
+#accueil .hero-cabinet-photo img {
+  min-height: 370px;
+  max-height: 580px;
 }
 
 .hero-actions {
@@ -1093,7 +1098,7 @@ textarea {
   }
 
   .hero-cabinet-photo {
-    min-height: 190px;
+    min-height: 200px;
   }
 
   .grid-2 {
